--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -1,88 +1,85 @@
+.card {
+  position: relative;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  background-color: #fff;
+}
+
 @media screen and (min-width: 1025px) {
   .card {
-    margin-top: 20px;
-    width: 250px;
-    height: 300px;
-    border: solid 1px #000;
-    box-shadow: 22px 16px 27px -3px rgba(0, 0, 0, 0.6);
-    border-radius: 20px;
-    margin-left: 25px;
-    margin-right: 25px;
-  }
-
-  .thumbnail {
-    height: 200px;
-    border-bottom: solid 1px #000;
-  }
-
-  .thumbnail img {
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    width: 100% !important;
-    height: 199px !important;
+    margin: 20px 0 10px 0;
+    width: 350px;
+    height: 380px;
   }
 }
 
 @media screen and (min-width: 482px) and (max-width: 1025px) {
   .card {
-    margin-top: 20px;
-    width: 40%;
-    height: 400px;
-    border: solid 1px #000;
-    box-shadow: 22px 16px 27px -3px rgba(0, 0, 0, 0.6);
-    border-radius: 20px;
-    margin-left: 25px;
-    margin-right: 25px;
-  }
-
-  .thumbnail {
-    height: 300px;
-    border-bottom: solid 1px #000;
-  }
-
-  .thumbnail img {
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    width: 100% !important;
-    height: 299px !important;
+    margin: 20px 0 0 0;
+    width: 30vw;
+    height: 310px;
   }
 }
 
 @media screen and (max-width: 481px) {
   .card {
-    margin-top: 20px;
-    width: 250px;
-    height: 300px;
-    border: solid 1px #000;
-    box-shadow: 22px 16px 27px -3px rgba(0, 0, 0, 0.6);
-    border-radius: 20px;
-    margin-left: 25px;
-    margin-right: 25px;
-    margin-bottom: 20px;
-  }
-
-  .thumbnail {
-    height: 200px;
-    border-bottom: solid 1px #000;
-  }
-
-  .thumbnail img {
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    width: 100% !important;
-    height: 199px !important;
+    margin: 10px 0 20px 0;
+    width: 350px;
+    height: 360px;
   }
 }
 
 .card:hover {
-  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.6);
+  transform: translate(0, -5.5px);
 }
 
-.title {
-  height: 50px;
+.thumbnail {
+  border: solid 1px #000;
 }
 
 .title h2 {
   font-size: 17px;
   text-align: left;
+  padding-left: 8px;
+}
+
+.tags {
+  margin-left: -40px;
+  display: flex;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  overflow: scroll;
+}
+
+@media screen and (min-width: 1025px) {
+  .tags {
+    height: 60px;
+  }
+}
+
+@media screen and (min-width: 482px) and (max-width: 1025px) {
+  .tags {
+    height: 60px;
+  }
+}
+
+@media screen and (max-width: 481px) {
+  .tags {
+    height: 80px;
+  }
+}
+
+.tag {
+  border: solid 1px #5bbee5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 4px 4px 8px;
+  padding: 2px;
+}
+
+.publishedAt {
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
 }
