--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,16 +1,12 @@
 .footer {
-  height: 70px;
+  height: 75px;
   display: flex;
   flex: 1;
   padding: 2rem 0;
   border-top: 1px solid #eaeaea;
   justify-content: center;
   align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
+  background: linear-gradient(to left, #5bbee4 0%, #52eac1 100%);
+  color: #fff;
+  font-size: 22px;
 }
