--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -22,74 +22,86 @@
 .about {
   display: block;
   padding: 10px;
-  background-color: #5bbee5;
+  background-color: #fff;
   border-radius: 3px;
-  color: white;
+  color: #5bbee5;
+  box-shadow: 0px 8px 16px -2px rgba(10, 10, 10, 0.1),
+    13px 14px 8px 1px rgba(10, 10, 10, 0.02);
+}
+
+.about:hover {
+  transform: translate(0, -2.5px);
 }
 
 .header {
-  height: 70px;
-  border-bottom: 1px solid #000;
+  background: linear-gradient(to right, #5bbee4 20%, #52eac1 80%);
+  height: 75px;
 }
 
-.headerContainer h3 {
-  font-size: 18px;
-  font-family: "Bad Script", cursive;
+.headerContainer {
+  margin-top: 20px;
+  height: 75px;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-
 @media screen and (min-width: 1026px) {
   .headerContainer {
-    margin-top: 20px;
-    width: 80%;
-    height: 70px;
-    margin: auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  .navi {
-    width: 20%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+    width: 1000px;
   }
 }
 
 @media screen and (min-width: 482px) and (max-width: 1025px) {
   .headerContainer {
-    margin-top: 20px;
-    width: 80%;
-    height: 70px;
-    margin: auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  .navi {
-    width: 30%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+    width: 600px;
   }
 }
 
 @media screen and (max-width: 481px) {
   .headerContainer {
-    margin-top: 20px;
     width: 95%;
-    height: 70px;
-    margin: auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
   }
+}
 
+.headerContainer h3 {
+  color: #fff;
+  font-weight: bold;
+  font-size: 25px;
+  font-family: "Bad Script", cursive;
+}
+
+.navi {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+@media screen and (min-width: 1026px) {
+  .navi {
+    width: 20%;
+  }
+}
+
+@media screen and (min-width: 482px) and (max-width: 1025px) {
+  .navi {
+    width: 25%;
+  }
+}
+
+@media screen and (max-width: 481px) {
   .navi {
     width: 40%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
   }
+}
+
+.search {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.search:hover {
+  transform: scale(1.2);
 }
