--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,9 +1,51 @@
 .main {
-  min-height: calc(100vh - 140px);
   display: flex;
-  flex-flow: row;
   flex-wrap: wrap;
-  width: 85%;
-  margin: auto;
   text-align: center;
+}
+
+@media screen and (min-width: 1026px) {
+  .main {
+    min-height: calc(100vh - 160px);
+    width: 1100px;
+    justify-content: space-between;
+    margin: auto;
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (min-width: 482px) and (max-width: 1025px) {
+  .main {
+    min-height: calc(100vh - 140px);
+    justify-content: space-between;
+    width: 95%;
+    margin: auto;
+  }
+}
+
+@media screen and (max-width: 481px) {
+  .main {
+    flex-direction: row;
+    min-height: calc(100vh - 140px);
+    justify-content: center;
+    width: 100%;
+    margin-top: 5px;
+  }
+}
+
+.main::after {
+  display: block;
+  content: "";
+}
+
+@media screen and (min-width: 1026px) {
+  .main::after {
+    width: 350px;
+  }
+}
+
+@media screen and (min-width: 482px) and (max-width: 1025px) {
+  .main::after {
+    width: 31%;
+  }
 }
